Crash when using a workspace/layout data path in a driver. #83411

Closed
opened 2020-12-04 22:25:22 +01:00 by Thierry Lefrancois · 14 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Intel(R) HD Graphics 4600 Intel 4.3.0 - Build 10.18.14.5117

Blender Version
Broken: version:

  • 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
  • 2.92.0, 2020-12-04
    Worked: 2.83.9

Short description of error
Crash when using a driver with Workspace as ID type and Layout as ID.

Exact steps for others to reproduce the error
Simplified steps:

  • Download the attached file.
  • In the Workspace Properties, copy the data path to the custom property.
  • Switch to the Object Properties and edit the driver.
  • Paste the data path.

#83411.blend
#83411.crash.txt


2.91.0

  • In the Workspace Properties create a custom property
  • Copy the data path of this custom property
  • Select the cube, add driver on any channel (location, rotation, scale)
  • Change the transform channel type of the variable to //Single Property/.
  • Set the ID type to Workspace and the ID to Layout
  • Paste the data path of the custom property into the field
    Blender should crash.

2.92.0 - Starting from the default startup file:

  • Select the cube, add driver on any channel (location, rotation, scale)
  • Change the transform channel type of the variable to //Single Property/.

Set the ID type to Workspace and the ID to Layout

Blender should crash.

Have a good day, amazing work!

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Intel(R) HD Graphics 4600 Intel 4.3.0 - Build 10.18.14.5117 **Blender Version** Broken: version: - 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` - 2.92.0, 2020-12-04 Worked: 2.83.9 **Short description of error** Crash when using a driver with *Workspace* as ID type and *Layout* as ID. **Exact steps for others to reproduce the error** Simplified steps: - Download the attached file. - In the *Workspace Properties*, copy the data path to the custom property. - Switch to the *Object Properties* and edit the driver. - Paste the data path. [#83411.blend](https://archive.blender.org/developer/F9533788/T83411.blend) [#83411.crash.txt](https://archive.blender.org/developer/F9533787/T83411.crash.txt) ---- 2.91.0 - In the *Workspace Properties* create a custom property - Copy the data path of this custom property - Select the cube, add driver on any channel (location, rotation, scale) - Change the transform channel type of the variable to //Single Property/. - Set the ID type to *Workspace* and the ID to *Layout* - Paste the data path of the custom property into the field Blender should crash. 2.92.0 - Starting from the default startup file: - Select the cube, add driver on any channel (location, rotation, scale) - Change the transform channel type of the variable to //Single Property/. # Set the ID type to *Workspace* and the ID to *Layout* Blender should crash. Have a good day, amazing work!

Added subscriber: @thierry1222

Added subscriber: @thierry1222
Robert Guetzkow changed title from Crash when pasting a workspace/layout data path into a driver. to Crash when using a workspace/layout data path in a driver. 2020-12-04 23:34:13 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this crash in Blender 2.91.0 and 2.92.0. Blender 2.83.9 appears to be working fine.

2.91.0

library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Line 268	C
BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Line 293	C
blender::deg::deg_expand_copy_on_write_datablock(const blender::deg::Depsgraph * depsgraph, const blender::deg::IDNode * id_node, blender::deg::DepsgraphNodeBuilder * node_builder, bool create_placeholders) Line 926	C++
blender::deg::deg_update_copy_on_write_datablock(const blender::deg::Depsgraph * depsgraph, const blender::deg::IDNode * id_node) Line 954	C++
blender::deg::deg_evaluate_copy_on_write(Depsgraph * graph, const blender::deg::IDNode * id_node) Line 1089	C++
 	[External Code]	
blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128	C++
 	[External Code]	
tbb::interface7::internal::isolate_impl<void,void <Lambdafunktion>(void) const>(const Task::()::__l2::void <Lambdafunktion>(void) & f) Line 160	C++
Task::operator()() Line 122	C++
tbb::internal::function_task<Task>::execute() Line 1049	C++
 	[External Code]	
tbb::internal::task_group_base::wait() Line 168	C++
blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 392	C++
BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 1606	C
wm_event_do_notifiers(bContext * C) Line 498	C
WM_main(bContext * C) Line 482	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 524	C
 	[External Code]	

2.92.0

blender::deg::DepsgraphNodeBuilder::build_id(ID * id) Line 479	C++
blender::deg::DepsgraphNodeBuilder::build_driver_variables(ID * id, FCurve * fcurve) Line 1005	C++
blender::deg::DepsgraphNodeBuilder::build_driver(ID * id, FCurve * fcurve, int driver_index) Line 994	C++
blender::deg::DepsgraphNodeBuilder::build_animdata(ID * id) Line 934	C++
blender::deg::DepsgraphNodeBuilder::build_object(int base_index, Object * object, blender::deg::eDepsNode_LinkedState_Type linked_state, bool is_visible) Line 646	C++
blender::deg::DepsgraphNodeBuilder::build_view_layer(Scene * scene, ViewLayer * view_layer, blender::deg::eDepsNode_LinkedState_Type linked_state) Line 117	C++
blender::deg::ViewLayerBuilderPipeline::build_nodes(blender::deg::DepsgraphNodeBuilder & node_builder) Line 36	C++
blender::deg::AbstractBuilderPipeline::build_step_nodes() Line 77	C++
blender::deg::AbstractBuilderPipeline::build() Line 56	C++
DEG_graph_build_from_view_layer(Depsgraph * graph) Line 229	C++
DEG_graph_relations_update(Depsgraph * graph) Line 282	C++
BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 2660	C
ED_update_for_newframe(Main * bmain, Depsgraph * depsgraph) Line 1583	C
wm_event_do_notifiers(bContext * C) Line 509	C
WM_main(bContext * C) Line 641	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C
I can confirm this crash in Blender 2.91.0 and 2.92.0. Blender 2.83.9 appears to be working fine. 2.91.0 ```lines library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Line 268 C BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Line 293 C blender::deg::deg_expand_copy_on_write_datablock(const blender::deg::Depsgraph * depsgraph, const blender::deg::IDNode * id_node, blender::deg::DepsgraphNodeBuilder * node_builder, bool create_placeholders) Line 926 C++ blender::deg::deg_update_copy_on_write_datablock(const blender::deg::Depsgraph * depsgraph, const blender::deg::IDNode * id_node) Line 954 C++ blender::deg::deg_evaluate_copy_on_write(Depsgraph * graph, const blender::deg::IDNode * id_node) Line 1089 C++ [External Code] blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128 C++ [External Code] tbb::interface7::internal::isolate_impl<void,void <Lambdafunktion>(void) const>(const Task::()::__l2::void <Lambdafunktion>(void) & f) Line 160 C++ Task::operator()() Line 122 C++ tbb::internal::function_task<Task>::execute() Line 1049 C++ [External Code] tbb::internal::task_group_base::wait() Line 168 C++ blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 392 C++ BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 1606 C wm_event_do_notifiers(bContext * C) Line 498 C WM_main(bContext * C) Line 482 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 524 C [External Code] ``` 2.92.0 ```lines blender::deg::DepsgraphNodeBuilder::build_id(ID * id) Line 479 C++ blender::deg::DepsgraphNodeBuilder::build_driver_variables(ID * id, FCurve * fcurve) Line 1005 C++ blender::deg::DepsgraphNodeBuilder::build_driver(ID * id, FCurve * fcurve, int driver_index) Line 994 C++ blender::deg::DepsgraphNodeBuilder::build_animdata(ID * id) Line 934 C++ blender::deg::DepsgraphNodeBuilder::build_object(int base_index, Object * object, blender::deg::eDepsNode_LinkedState_Type linked_state, bool is_visible) Line 646 C++ blender::deg::DepsgraphNodeBuilder::build_view_layer(Scene * scene, ViewLayer * view_layer, blender::deg::eDepsNode_LinkedState_Type linked_state) Line 117 C++ blender::deg::ViewLayerBuilderPipeline::build_nodes(blender::deg::DepsgraphNodeBuilder & node_builder) Line 36 C++ blender::deg::AbstractBuilderPipeline::build_step_nodes() Line 77 C++ blender::deg::AbstractBuilderPipeline::build() Line 56 C++ DEG_graph_build_from_view_layer(Depsgraph * graph) Line 229 C++ DEG_graph_relations_update(Depsgraph * graph) Line 282 C++ BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 2660 C ED_update_for_newframe(Main * bmain, Depsgraph * depsgraph) Line 1583 C wm_event_do_notifiers(bContext * C) Line 509 C WM_main(bContext * C) Line 641 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C ```

@rjg, is this a crash or assert failure? If it's a crash, can you share .blend file with minimum steps needed to crash?

@rjg, is this a crash or assert failure? If it's a crash, can you share .blend file with minimum steps needed to crash?

@Sergey It crashes in release builds and triggers an assert in debug builds. In Blender 2.92 it's an assert in void DepsgraphNodeBuilder::build_id(ID *id) because it reaches the default case. The description has been updated with a simple example project.

@Sergey It crashes in release builds and triggers an assert in debug builds. In Blender 2.92 it's an assert in `void DepsgraphNodeBuilder::build_id(ID *id)` because it reaches the `default` case. The description has been updated with a simple example project.

This issue was referenced by 876fd40643

This issue was referenced by 876fd40643dfa7b206edabbde30809e6e48e583b

This issue was referenced by 0f95f51361

This issue was referenced by 0f95f51361d73fbd8ba8d80b3b65da930dcf3b20

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2021-01-13 12:14:33 +01:00

This issue was referenced by cd24712c2c

This issue was referenced by cd24712c2c51ab753369f7cae8c43c38115bd59f

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Re-opening, caused issue which affects more users.

Re-opening, caused issue which affects more users.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83411
No description provided.